cve-infra/jenkins/agents/build-agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-agents-test
  labels:
    purpose: jenkins-agents
