cve-infra/jenkins/agents/build-agent/pod-template.yaml
apiVersion: v1
kind: Pod
spec:
  serviceAccountName: jenkins-build-agent
  securityContext:
    hostUsers: false
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: jnlp
      image: jenkins/inbound-agent:latest
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsGroup: 0
        capabilities:
          drop:
            - ALL
      tty: true
      workingDir: /home/jenkins

    - name: build
      image: image-registry.openshift-image-registry.svc:5000/ceph-jenkins/build-agent:latest
      command:
        - cat
      tty: true
      workingDir: /home/jenkins
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsGroup: 0
        capabilities:
          drop:
            - ALL
