cve-infra/jenkins/agents/build-agent/networkpolicy-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: jenkins-agents-test
spec:
  podSelector:
    matchLabels:
      jenkins: slave
  policyTypes:
    - Egress
  egress:
    - {}
